--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+
   <!-- Login Page -->
   <div id="loginPage" class="page">
     <div class="login-container">
@@ -26,6 +27,7 @@
 
   <!-- Main Dashboard -->
   <div id="dashboardPage" class="container" style="display: none;">
+    
     <!-- Sidebar Toggle Button -->
     <div class="sidebar-toggle" onclick="toggleSidebar()">
       <i class="fas fa-bars"></i>
@@ -47,6 +49,7 @@
 
     <!-- Main Content -->
     <div class="main-content">
+
       <!-- Dashboard Page -->
       <div id="dashboard" class="page">
         <h1><i class="fas fa-users"></i> User Dashboard</h1>
@@ -61,7 +64,7 @@
             </tr>
           </thead>
           <tbody>
-            <!-- Rows will be populated by JavaScript -->
+            <!-- Rows populated by JavaScript -->
           </tbody>
         </table>
       </div>
@@ -133,7 +136,7 @@
             </tr>
           </thead>
           <tbody>
-            <!-- Rows will be populated by JavaScript -->
+            <!-- Rows populated by JavaScript -->
           </tbody>
         </table>
       </div>
@@ -154,7 +157,7 @@
             </tr>
           </thead>
           <tbody>
-            <!-- Logs will be populated by JavaScript -->
+            <!-- Logs populated by JavaScript -->
           </tbody>
         </table>
       </div>
@@ -170,8 +173,9 @@
           </select>
         </div>
       </div>
-    </div>
-  </div>
+
+    </div> <!-- End Main Content -->
+  </div> <!-- End Dashboard -->
 
   <script src="script.js"></script>
 </body>
